2006-09-19 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* WelcomePage.mdp: Updated.
	* .: Added svn:ignore for WelcomePage.pidb.

2006-08-31 Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* WelcomePageView.cs: Win32 pathing fixes, and weird gecko#/win32 workaround.

2006-08-10  Scott Ellington  <scott.ellington@gmail.com>

	* WelcomePageView.cs: override StockIconId for home tab icon

2006-08-08  Scott Ellington  <scott.ellington@gmail.com>

	* WelcomePageView.cs: reload when recent solutions list changes

2006-08-08  Scott Ellington  <scott.ellington@gmail.com>

	* WelcomePage.xsl: provide better development links

2006-07-28 Matej Urbas <matej.urbas@gmail.com>

	* WelcomePageView.cs: Fixed the wrong assumption I made about languages.
	  The internationalized strings now use string formatting to allow better
	  translations for other languages.

2006-07-28 Matej Urbas <matej.urbas@gmail.com>

	* WelcomePageView.cs: Added i18n support for the title and a small part of
	  the contents.

2006-07-28  Scott Ellington  <scott.ellington@gmail.com>

	* WelcomePageView.cs: 
	convert project's URI to local path (fixes 78579)

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* WelcomePage.addin.xml: Updated versions.

2006-06-08 Matej Urbas <matej.urbas@gmail.com>

	* WelcomePageView.cs: Made the Welcome page ViewOnly.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* WelcomePage.addin.xml: Updated versions.
	* WelcomePage.mdp: Updated.

2006-04-04 Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.xsl: Removed cshrp.net.

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am:
	* WelcomePage.addin.xml: Updated references.

2006-03-29 Grzegorz Sobanski  <silk@boktor.net>  

	* Makefile.am: removed unneeded references to nunit.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* WelcomePage.addin.xml: Updated add-in versions.
