@@ -18,6 +18,9 @@
     <File name="./WelcomePageCommands.cs" subtype="Code" buildaction="Compile" />
     <File name="./WelcomePageOptionPanel.cs" subtype="Code" buildaction="Compile" />
     <File name="./WelcomePageView.cs" subtype="Code" buildaction="Compile" />
+    <File name="./WelcomePage.addin.xml" subtype="Code" buildaction="Nothing" />
+    <File name="./WelcomePage.xsl" subtype="Code" buildaction="Nothing" />
+    <File name="./WelcomePageContent.xml" subtype="Code" buildaction="Nothing" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
