@@ -1,0 +1,45 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<WelcomePage _title="MonoDevelop Home Page" _desc="Free .Net Development Environment">
+	
+	<Actions _title="Common Actions">
+		<Action href="monodevelop://NewProject" _title="Start a New Project"/>
+		<Action href="monodevelop://OpenFile" _title="Open a Project / File"/>
+	</Actions>
+	
+	<Projects
+		_title="Recent Projects"
+		_siteSub="From MonoDevelop"
+		_col1="Project"
+		_col2="Last Modified"
+		_linkTitle="Open Project"
+	/>
+	
+	<Links _title="Support Links">
+		<Link
+			href="http://www.monodevelop.com"
+			_title="MonoDevelop Home Page"
+		/>
+		<Link
+			href="http://www.mono-project.com/Main_Page"
+			_title="Mono Project Home Page"
+		/>
+	</Links>
+	
+	<Links _title="Development Links">
+		<Link 
+			href="http://www.go-mono.com/docs/" 
+			_title="Mono Documentation Library" 
+			_desc="Online documentation for Mono libraries."
+		/>
+		<Link
+			href="http://msdn2.microsoft.com/en-us/library/ms306608.aspx"
+			_title="MSDN Class Library Reference"
+			_desc="Documentation for Microsoft's implementation of the .NET framework."
+		/>
+		<Link
+			href="http://www.codeproject.com/"
+			_title="The Code Project"
+			_desc="A popular site for .NET articles, code snippets, and discussions."
+		/>
+	</Links>
+</WelcomePage>
