@@ -1,3 +1,13 @@
+2006-12-01 Gideon de Swardt <gdeswardt@gmail.com>
+	
+	* WelcomePageView.cs: Added an Extension Object to the Xslt 
+	  argument list that will allow xslt to call the GetString method during
+	  the transformation process.
+	* WelcomePage.xsl: Changed the xsl to use the GetString method to allow 
+	  for localization
+	* WelcomePageContent.xml: Added the xml document containing all the 
+	  content strings.
+
 2006-09-19 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>
 
 	* WelcomePage.mdp: Updated.
